--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,9 +16,8 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_height="match_parent"
         android:layout_width="wrap_content"
-        android:text="Get Directions"
-        ></Button>
+        android:layout_height="match_parent"
+        android:text="Get Directions"></Button>
 
 </LinearLayout>
