--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -15,7 +15,7 @@
         tools:context=".MapsActivity" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/activity_maps_button"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:text="Get Directions"
