--- a/app/src/main/res/layout/content_weather_list.xml
+++ b/app/src/main/res/layout/content_weather_list.xml
@@ -9,12 +9,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.example.safetravelsclient.models.LandingActivity">
+    tools:context="com.example.safetravelsclient.models.WeatherListActivity">
 
     <ListView
         android:id="@+id/content_weather_listing"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:divider="#000"
+        android:dividerHeight="1px">
 
     </ListView>
 
