--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,7 +11,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="535dp"
+        android:layout_height="match_parent"
         tools:context=".MapsActivity" />
 
     <Button
@@ -31,14 +31,25 @@
         android:background="@drawable/edittext_bg"
         android:inputType="text" />
 
+    <EditText
+        android:id="@+id/plain_text_input2"
+        android:layout_width="128dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="611dp"
+        android:background="@drawable/edittext_bg"
+        android:inputType="text" />
+
     <Button
         android:id="@+id/button3"
         android:layout_width="58dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="33dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="18dp"
         android:background="@drawable/edittext_bg" />
 
 </RelativeLayout>
