--- a/app/src/main/res/layout/content_weather_list.xml
+++ b/app/src/main/res/layout/content_weather_list.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.example.safetravelsclient.models.WeatherListActivity">
+    tools:context="com.example.safetravelsclient.models.WeatherListActivity"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <ListView
         android:id="@+id/content_weather_listing"
