--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -15,41 +15,16 @@
         tools:context=".MapsActivity" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="75dp"
-        android:text="Get Directions"></Button>
-
-    <EditText
-        android:id="@+id/plain_text_input"
-        android:layout_width="128dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="88dp"
-        android:layout_marginBottom="657dp"
-        android:background="@drawable/edittext_bg"
-        android:inputType="text" />
-
-    <EditText
-        android:id="@+id/plain_text_input2"
-        android:layout_width="128dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="611dp"
-        android:background="@drawable/edittext_bg"
-        android:inputType="text" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="58dp"
+        android:id="@+id/directionButton"
+        android:layout_width="122dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="18dp"
-        android:background="@drawable/edittext_bg" />
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="68dp"
+        android:background="@drawable/get_directions_button"
+        android:onClick="onDirectionButtonClick"
+        android:text="Directions"></Button>
+
 
 </RelativeLayout>
