--- a/app/src/main/res/drawable/get_directions_button.xml
+++ b/app/src/main/res/drawable/get_directions_button.xml
@@ -14,11 +14,12 @@
             <solid android:color="#58857e"/>
         </shape>
     </item>
-    <item >
+
+    <item>
         <shape android:shape="rectangle"  >
             <corners android:radius="3dip" />
             <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#8dbab3" android:endColor="#58857e" />
+            <gradient android:angle="-90" android:startColor="#427869" android:endColor="#74c2ad" />
         </shape>
     </item>
 </selector>
