--- a/app/src/main/res/layout/content_weather_list.xml
+++ b/app/src/main/res/layout/content_weather_list.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="com.example.safetravelsclient.models.WeatherListActivity"
+    tools:context="com.example.safetravelsclient.WeatherListActivity"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <ListView
