--- a/app/src/main/res/layout/direction_pop_up.xml
+++ b/app/src/main/res/layout/direction_pop_up.xml
@@ -8,6 +8,8 @@
 
     <EditText
         android:id="@+id/editText"
+        android:elevation="10dp"
+        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="52dp"
         android:layout_alignParentStart="true"
@@ -21,6 +23,8 @@
 
     <EditText
         android:id="@+id/editText2"
+        android:elevation="10dp"
+        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="53dp"
         android:layout_below="@+id/editText"
@@ -42,6 +46,8 @@
         android:layout_marginTop="23dp"
         android:layout_marginBottom="23dp"
         android:layout_toRightOf="@+id/editText2"
+        android:elevation="10dp"
+        android:padding="10dp"
         android:background="@drawable/get_directions_button"
         android:text="GO" />
 </RelativeLayout>
