--- a/app/src/main/res/layout/weather_list_entry_layout.xml
+++ b/app/src/main/res/layout/weather_list_entry_layout.xml
@@ -4,7 +4,8 @@
     android:layout_height="fill_parent"
     android:layout_marginBottom="0dp"
     android:layout_marginTop="0dp"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="false"
+    android:focusable="false">
 
     <TextView
         android:id="@+id/list_entry_id"
