--- a/app/src/main/res/layout/direction_pop_up.xml
+++ b/app/src/main/res/layout/direction_pop_up.xml
@@ -19,12 +19,12 @@
         android:background="@drawable/edittext_bg"
         android:ems="10"
         android:hint="Current Location"
+        android:textColorHint="#000000"
+        android:textColor="#000000"
         android:inputType="textPersonName|textPostalAddress" />
 
     <EditText
         android:id="@+id/editText2"
-        android:elevation="10dp"
-        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="53dp"
         android:layout_below="@+id/editText"
@@ -33,9 +33,13 @@
         android:layout_marginTop="93dp"
         android:layout_marginBottom="51dp"
         android:background="@drawable/edittext_bg"
+        android:elevation="10dp"
         android:ems="10"
         android:hint="Destination"
-        android:inputType="textPersonName" />
+        android:textColorHint="#000000"
+        android:inputType="textPersonName"
+        android:padding="10dp"
+        android:textColor="#000000" />
 
     <Button
         android:id="@+id/directions"
