--- a/app/src/main/res/layout/content_weather_list.xml
+++ b/app/src/main/res/layout/content_weather_list.xml
@@ -18,11 +18,22 @@
         android:id="@+id/content_weather_listing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10px"
         android:divider="#000"
         android:dividerHeight="1px"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:descendantFocusability="blocksDescendants">
     </ListView>
+
+    <Button
+        android:id="@+id/back_button_weather_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="20dp"
+        android:text="Map"
+        app:layout_constraintStart_toEndOf="@+id/content_weather_listing"
+        android:layout_below="@+id/content_weather_listing"/>
 
 </RelativeLayout>
