--- a/app/src/main/res/layout/activity_in_depth_view.xml
+++ b/app/src/main/res/layout/activity_in_depth_view.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:text="Back"
+        android:background="@drawable/button_theme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
