--- a/app/src/main/res/layout/content_weather_list.xml
+++ b/app/src/main/res/layout/content_weather_list.xml
@@ -19,7 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10px"
-        android:divider="#000"
+        android:headerDividersEnabled="false"
+        android:footerDividersEnabled="true"
+        android:divider="@drawable/list_view_divider"
         android:dividerHeight="1px"
         android:focusable="false"
         android:focusableInTouchMode="false"
@@ -32,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/button_theme"
         android:text="Map"
         app:layout_constraintStart_toEndOf="@+id/content_weather_listing"
         android:layout_below="@+id/content_weather_listing"/>
