--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -2,10 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="40dip" />
+            <corners android:bottomRightRadius="80dip" android:bottomLeftRadius="80dip"/>
             <gradient android:angle="-90" android:startColor="#5169db" android:endColor="#2b2b2b" />
         </shape>
     </item>
 </selector>
-
-
