--- a/app/src/main/res/layout/activity_in_depth_view.xml
+++ b/app/src/main/res/layout/activity_in_depth_view.xml
@@ -8,12 +8,12 @@
 
     <Button
         android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/get_directions_button"
         android:text="Back"
-        android:background="@drawable/button_theme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,41 +32,41 @@
         android:id="@+id/weatherDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="16dp"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/location" />
+        app:layout_constraintTop_toBottomOf="@+id/weatherImage" />
 
     <TextView
         android:id="@+id/windDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="75dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="48dp"
         android:text="Wind:"
-        app:layout_constraintStart_toEndOf="@id/percipitationValue"
-        app:layout_constraintTop_toBottomOf="@+id/location" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/windValue"
+        app:layout_constraintTop_toBottomOf="@+id/weatherImage" />
 
     <TextView
         android:id="@+id/windValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="22dp"
-        app:layout_constraintStart_toEndOf="@+id/windDescription"
-        app:layout_constraintTop_toBottomOf="@+id/location" />
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="48dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weatherImage" />
 
     <TextView
         android:id="@+id/precipitationDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="24dp"
         android:text="Precip:"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/weatherDescription" />
 
@@ -74,53 +74,50 @@
         android:id="@+id/percipitationValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/precipitationDescription"
-        app:layout_constraintTop_toBottomOf="@+id/windDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/weatherDescription" />
 
     <TextView
         android:id="@+id/humidityDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="75dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="48dp"
         android:text="Humidity:"
-        app:layout_constraintStart_toEndOf="@+id/percipitationValue"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/humidityValue"
         app:layout_constraintTop_toBottomOf="@+id/windDescription" />
 
     <TextView
         android:id="@+id/humidityValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toEndOf="@+id/humidityDescription"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="48dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/windValue" />
 
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="20dp"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/humidityDescription" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="24sp"
+        app:layout_constraintStart_toEndOf="@+id/weatherImage"
+        app:layout_constraintTop_toBottomOf="@+id/backButton" />
 
     <TextView
         android:id="@+id/temperatureValue"
-        android:layout_width="75dp"
-        android:layout_height="71dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginLeft="75dp"
-        android:layout_marginTop="20dp"
-        android:text="58"
-        android:textSize="48sp"
+        android:layout_width="120dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:textSize="72dp"
         app:layout_constraintStart_toEndOf="@+id/weatherImage"
         app:layout_constraintTop_toBottomOf="@+id/date" />
 
@@ -128,33 +125,34 @@
         android:id="@+id/weatherImage"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="24dp"
         android:contentDescription="weatherDescription"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/precipitationDescription"
-        app:srcCompat="@drawable/sunny" />
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        app:srcCompat="@drawable/sunny1" />
 
     <TextView
         android:id="@+id/highTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@id/temperatureValue"
-        app:layout_constraintTop_toBottomOf="@id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/date" />
 
     <TextView
         android:id="@+id/lowTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/temperatureValue"
         app:layout_constraintTop_toBottomOf="@+id/highTemperature" />
+
+
 
     <ScrollView
         android:layout_width="409dp"
@@ -183,21 +181,21 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/sunny" />
+                    app:srcCompat="@drawable/sunny1" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
-                    android:layout_height="75dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Sunny" />
+                    android:text="Cloudy" />
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
-                    android:layout_height="37.5dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="time" />
+                    android:text="12:00PM" />
 
             </LinearLayout>
 
@@ -211,21 +209,21 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/sunny" />
+                    app:srcCompat="@drawable/sunny1" />
 
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="75dp"
                     android:layout_weight="1"
-                    android:text="Sunny" />
+                    android:text="Snow" />
 
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
-                    android:layout_height="37.5dp"
+                    android:layout_height="75dp"
                     android:layout_weight="1"
-                    android:text="time" />
+                    android:text="3:00PM" />
 
             </LinearLayout>
 
@@ -239,7 +237,7 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/sunny" />
+                    app:srcCompat="@drawable/sunny1" />
 
                 <TextView
                     android:id="@+id/textView11"
@@ -251,9 +249,9 @@
                 <TextView
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
-                    android:layout_height="37.5dp"
+                    android:layout_height="75dp"
                     android:layout_weight="1"
-                    android:text="time" />
+                    android:text="6:00PM" />
 
             </LinearLayout>
 
@@ -267,21 +265,21 @@
                     android:layout_width="75dp"
                     android:layout_height="75dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/sunny" />
+                    app:srcCompat="@drawable/sunny1" />
 
                 <TextView
                     android:id="@+id/textView14"
                     android:layout_width="wrap_content"
                     android:layout_height="75dp"
                     android:layout_weight="1"
-                    android:text="Sunny" />
+                    android:text="Rain" />
 
                 <TextView
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
-                    android:layout_height="37.5dp"
+                    android:layout_height="75dp"
                     android:layout_weight="1"
-                    android:text="time" />
+                    android:text="9:00PM" />
 
             </LinearLayout>
 
@@ -292,24 +290,24 @@
 
                 <ImageView
                     android:id="@+id/imageView16"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/sunny" />
+                    app:srcCompat="@drawable/sunny1" />
 
                 <TextView
                     android:id="@+id/textView24"
                     android:layout_width="wrap_content"
                     android:layout_height="75dp"
                     android:layout_weight="1"
-                    android:text="Sunny" />
+                    android:text="Partly Cloudy" />
 
                 <TextView
                     android:id="@+id/textView25"
                     android:layout_width="wrap_content"
-                    android:layout_height="37.5dp"
+                    android:layout_height="75dp"
                     android:layout_weight="1"
-                    android:text="time" />
+                    android:text="12:00Am" />
 
             </LinearLayout>
         </LinearLayout>
