--- a/app/src/main/res/layout/weather_list_entry_layout.xml
+++ b/app/src/main/res/layout/weather_list_entry_layout.xml
@@ -9,46 +9,62 @@
 
     <TextView
         android:id="@+id/list_entry_id"
-        android:layout_width="wrap_content"
+        android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:paddingTop="10dp"
         android:gravity="center"
-        android:text="Cherry"/>
+        android:paddingTop="5dp"
+        android:layout_marginBottom="2dp"
+        android:text="Cherry"
+        android:textSize="8pt"
+        android:textColor="@color/colorListEntryText"/>
 
     <TextView
         android:id="@+id/list_entry_location"
-        android:layout_width="wrap_content"
+        android:layout_width="160dp"
+        android:layout_weight=".2"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/list_entry_id"
-        android:layout_centerVertical="true"
-        android:paddingTop="10dp"
-        android:text="Cherry"/>
+        android:paddingTop="5dp"
+        android:layout_marginBottom="2dp"
+        android:text="Cherry"
+        android:textColor="@color/colorListEntryText"
+        android:textSize="8pt" />
 
     <TextView
         android:id="@+id/list_entry_temperature"
-        android:layout_width="wrap_content"
+        android:layout_width="55dp"
+        android:layout_weight=".1"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/list_entry_location"
-        android:layout_centerVertical="true"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"/>
+        android:paddingTop="5dp"
+        android:paddingRight="3dp"
+        android:layout_marginBottom="2dp"
+        android:text="Cherry"
+        android:textColor="@color/colorListEntryText"
+        android:textSize="8pt" />
 
     <TextView
         android:id="@+id/list_entry_precipitation"
-        android:layout_width="wrap_content"
+        android:layout_width="45dp"
+        android:layout_weight=".2"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/list_entry_temperature"
-        android:layout_centerVertical="true"
-        android:paddingTop="10dp"
-        android:text="Cherry"/>
+        android:paddingTop="5dp"
+        android:layout_marginBottom="2dp"
+        android:text="Cherry"
+        android:textColor="@color/colorListEntryText"
+        android:textSize="8pt" />
 
     <TextView
         android:id="@+id/list_entry_wind_velocity"
-        android:layout_width="wrap_content"
+        android:layout_width="90dp"
+        android:layout_weight=".1"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/list_entry_precipitation"
-        android:layout_centerVertical="true"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"/>
+        android:paddingTop="5dp"
+        android:paddingRight="3dp"
+        android:layout_marginBottom="2dp"
+        android:text="Cherry"
+        android:textSize="8pt"
+        android:textColor="@color/colorListEntryText"/>
 </RelativeLayout>
