Inital OpenWeather implementations

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -87,5 +87,14 @@
         android:clickable="true"
         android:elevation="10dp" />
 
+    <TextView
+        android:id="@+id/temp_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="450dp"
+        android:text="TextView"
+        android:textSize="30sp" />
+
 
 </RelativeLayout>
