--- a/app/src/main/res/layout/content_weather_list.xml
+++ b/app/src/main/res/layout/content_weather_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -36,15 +36,24 @@
         android:descendantFocusability="blocksDescendants">
     </ListView>
 
-    <Button
-        android:id="@+id/back_button_weather_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/button_theme"
-        android:text="Map"
-        app:layout_constraintStart_toEndOf="@+id/content_weather_listing"
-        android:layout_below="@+id/content_weather_listing"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal|bottom"
+        >
+            <Button
+            android:id="@+id/back_button_weather_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="15dp"
 
-</RelativeLayout>
+            android:layout_gravity="bottom"
+            android:background="@drawable/get_directions_button"
+            android:text="Map"
+            />
+    </LinearLayout>
+
+</LinearLayout>
