--- a/app/src/main/res/layout/activity_in_depth_view.xml
+++ b/app/src/main/res/layout/activity_in_depth_view.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="20dp"
         android:textSize="32sp"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backButton" />
@@ -35,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
+        android:elevation="10dp"
         android:gravity="center"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,6 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
+        android:elevation="10dp"
         android:layout_marginTop="24dp"
         android:text="Wind:"
         android:textSize="24sp"
@@ -57,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:elevation="10dp"
         android:layout_marginTop="24dp"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/windDescription"
@@ -66,6 +70,7 @@
         android:id="@+id/precipitationDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="10dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="24dp"
         android:text="Precipitation:"
@@ -78,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:elevation="10dp"
         android:layout_marginTop="24dp"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/precipitationDescription"
@@ -88,6 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
+        android:elevation="10dp"
         android:layout_marginTop="24dp"
         android:text="Humidity:"
         android:textSize="24sp"
@@ -100,6 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
+        android:elevation="10dp"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/humidityDescription"
         app:layout_constraintTop_toBottomOf="@+id/windValue" />
@@ -110,6 +118,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
+        android:elevation="10dp"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/backButton"
         app:layout_constraintTop_toTopOf="parent" />
@@ -119,6 +128,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginStart="48dp"
+        android:elevation="10dp"
         android:layout_marginEnd="48dp"
         android:textSize="72dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,6 +140,7 @@
         android:layout_width="175dp"
         android:layout_height="175dp"
         android:layout_marginStart="48dp"
+        android:elevation="10dp"
         android:layout_marginEnd="48dp"
         android:contentDescription="weatherDescription"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,6 +152,7 @@
         android:id="@+id/highTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="10dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:textSize="24sp"
@@ -151,6 +163,7 @@
         android:id="@+id/lowTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="10dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:textSize="24sp"
