--- a/app/src/main/res/layout/activity_in_depth_view.xml
+++ b/app/src/main/res/layout/activity_in_depth_view.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
+        android:layout_marginTop="50dp"
         android:elevation="10dp"
         android:gravity="center"
         android:textSize="36sp"
@@ -47,9 +48,9 @@
         android:id="@+id/windDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="36dp"
         android:elevation="10dp"
-        android:layout_marginTop="24dp"
         android:text="Wind:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,9 +60,9 @@
         android:id="@+id/windValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="36dp"
         android:elevation="10dp"
-        android:layout_marginTop="24dp"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/windDescription"
         app:layout_constraintTop_toBottomOf="@+id/percipitationValue" />
@@ -70,9 +71,9 @@
         android:id="@+id/precipitationDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="75dp"
         android:layout_marginTop="24dp"
+        android:elevation="10dp"
         android:text="Precipitation:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,9 +83,9 @@
         android:id="@+id/percipitationValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:elevation="10dp"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="24dp"
+        android:elevation="10dp"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/precipitationDescription"
         app:layout_constraintTop_toBottomOf="@+id/weatherDescription" />
@@ -93,9 +94,9 @@
         android:id="@+id/humidityDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="44dp"
         android:elevation="10dp"
-        android:layout_marginTop="24dp"
         android:text="Humidity:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,8 +106,8 @@
         android:id="@+id/humidityValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="44dp"
         android:elevation="10dp"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/humidityDescription"
@@ -171,6 +172,18 @@
         app:layout_constraintTop_toBottomOf="@+id/highTemperature" />
 
 
-
+    <RelativeLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="365dp"
+        android:layout_height="336dp"
+        android:layout_margin="20dp"
+        android:background="@drawable/example"
+        android:paddingTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.619"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weatherImage"
+        app:layout_constraintVertical_bias="0.884" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
