--- a/app/src/main/res/layout/weather_list_entry_layout.xml
+++ b/app/src/main/res/layout/weather_list_entry_layout.xml
@@ -52,7 +52,7 @@
 
     <TextView
         android:id="@+id/list_entry_precipitation"
-        android:layout_width="45dp"
+        android:layout_width="60dp"
         android:layout_weight=".2"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/list_entry_temperature"
@@ -67,15 +67,14 @@
     <TextView
         android:id="@+id/list_entry_wind_velocity"
         android:layout_width="90dp"
-        android:layout_weight=".1"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:layout_toRightOf="@+id/list_entry_precipitation"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
 
-        android:paddingRight="3dp"
+        android:layout_weight=".1"
 
+        android:paddingRight="6dp"
         android:text="Cherry"
-        android:textSize="8pt"
-        android:textColor="@color/colorListEntryText"/>
+        android:textColor="@color/colorListEntryText"
+        android:textSize="8pt" />
 </RelativeLayout>
