--- a/app/src/main/res/layout/weather_list_entry_layout.xml
+++ b/app/src/main/res/layout/weather_list_entry_layout.xml
@@ -6,6 +6,7 @@
     android:layout_marginBottom="0dp"
     android:layout_marginTop="0dp"
     android:focusableInTouchMode="false"
+    android:background="@color/colorListEntryBG"
     android:focusable="false">
 
     <ImageView
