Added pop-up box for maps activity.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -73,7 +73,7 @@
         android:layout_marginBottom="3dp"
         android:clickable="true"
         android:elevation="10dp"
-        android:background="@drawable/getlocation" />
+        android:background="@drawable/getlocation"/>
 
     <ImageButton
         android:id="@+id/infoButton"
@@ -85,7 +85,8 @@
         android:layout_marginBottom="60dp"
         android:background="@drawable/info"
         android:clickable="true"
-        android:elevation="10dp" />
+        android:elevation="10dp"
+        android:onClick="openInfoDialog"/>
 
 
 </RelativeLayout>
