--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -73,7 +73,8 @@
         android:layout_marginBottom="3dp"
         android:clickable="true"
         android:elevation="10dp"
-        android:background="@drawable/getlocation"/>
+        android:background="@drawable/getlocation"
+        android:onClick="currentLocation"/>
 
     <ImageButton
         android:id="@+id/infoButton"
